fix: Fix popup z-index

--- a/client/Pages/PageCategory/elements/Dropdown/Dropdown.module.css
+++ b/client/Pages/PageCategory/elements/Dropdown/Dropdown.module.css
@@ -3,7 +3,7 @@
 
   &.visible {
     .containerLabel {
-      z-index: 2;
+      z-index: 110;
     }
 
     .arrow {
@@ -15,7 +15,6 @@
     top: var(--space-xs-neg);
     right: var(--space-s-neg);
     left: auto;
-    z-index: 1;
 
     padding-top: calc(24px + var(--space-xs));
 
